--- a/index.css
+++ b/index.css
@@ -84,64 +84,101 @@ html,body{
     font-style: normal;
 }
 
-.get-to-know-us{
+section{
     position: relative;
-    top: 0;
-    left: 0;
-    width: auto;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    background: #f1f1f1;
 }
 
 .gtku-bloco{
     position: relative;
-    margin: 5vh;
-    width: 40vw;
-    height: auto;
-    background: #f1f1f1;
-    border-radius: 1vh;
-    text-align: left;
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.23);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.23);
-    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.23);
-}
-.gtku-foto{
-    position: relative;
-    width: 40vw;
-    height: 50vh;
+    width: 50vw;
+    height: 100vh;
+    background-position: center;
     background-size: cover;
-    border-radius: 1vh 1vh 0 0;
 }
+.gtku-logo{
+    position: absolute;
+    bottom: 5vh;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%);
+    height: 85vh;
+}
+.gtku-rodrigo-img{
+    position: absolute;
+    right: 4vw;
+    bottom: 0;
+    height: 45vh;
+    z-index: 5;
+}
+.gtku-nicolas-img{
+    position: absolute;
+    left: 4vw;
+    bottom: 0;
+    height: 47vh;
+    z-index: 5;
+}
+
+.gtku-conteudo{
+    text-align: left;
+    position: absolute;
+    top: 20vh;
+    width: 16vw;
+}
+
+.gtku-rodrigo-focus{
+    position: absolute;
+    right: 4vw;
+    bottom: 0;
+    height: 45vh;
+    z-index: 6;
+    opacity: 0;
+    transition-duration: 1s;
+}
+.gtku-nicolas-focus{
+    position: absolute;
+    left: 4vw;
+    bottom: 0;
+    height: 47vh;
+    z-index: 6;
+    opacity: 0;
+    transition-duration: 1s;
+}
+
 .gtku-bloco h1{
     position: relative;
     font-size: 4vh;
-    color: #003dd9;
+    color: #737373;
+    transition-duration: 1s;
 }
 .gtku-bloco h2{
     position: relative;
     font-size: 3vh;
-    color: #195BFF;
+    color: #737373;
+    transition-duration: 1s;
 }
 .gtku-bloco p{
     position: relative;
-    font-size: 2vh;
-    color: #020926;
+    font-size: 2.5vh;
+    color: #737373;
     margin-top: 3vh;
+    transition-duration: 1s;
 }
-.gtku-conteudo{
-    padding: 5vh;
-    padding-top: 2vh;
-}
+
 .gtku-contact{
-    width: auto;
+    width: 20vw;
     height: auto;
     position: relative;
     margin-top: 4vh;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    display: none;
 }
 
 .gtku-linkedin{
@@ -200,12 +237,3 @@ html,body{
     bottom: 3.5vh;
     font-size: 1.5vh;
 }
-
-
-/*     position: relative;
-    background: #195BFF;
-    height: 5vh;
-    width: 5vh;
-    border-radius: 50%;
-    margin-left: 2.5vh;
-    z-index: 10; */
